Deploy PlateCraft – Monthly Meal Prep Planner via Teda

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
       }
     }
   </script>
+  <!-- PWA: manifest and theme color -->
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#FFF9F2">
+  <link rel="apple-touch-icon" href="icons/icon-192.svg">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <style type="text/tailwindcss" data-teda="tailwind-apply">
     @layer components {
