--- a/app.html
+++ b/app.html
@@ -42,6 +42,10 @@
       .meal-item { @apply flex items-center justify-between gap-2 rounded-lg bg-mist px-2 py-1 text-xs; }
     }
   </style>
+  <!-- PWA: manifest and theme color -->
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#FFF9F2">
+  <link rel="apple-touch-icon" href="icons/icon-192.svg">
 </head>
 <body class="bg-cream text-ink font-body">
   <header class="sticky top-0 z-40 bg-cream/80 backdrop-blur border-b border-ink/10">
