Deploy PlateCraft – Monthly Meal Prep Planner via Teda

--- a/index.html
+++ b/index.html
@@ -85,15 +85,15 @@
           <a class="btn-primary" href="app.html">Start planning now</a>
           <a class="btn-ghost" href="#features">See how it works</a>
         </div>
-        <div class="mt-12 grid grid-cols-12 gap-4">
-          <div class="col-span-8 card card-hover p-6">
+        <div class="mt-12 grid grid-cols-1 lg:grid-cols-12 gap-4">
+          <div class="col-span-12 lg:col-span-8 card card-hover p-6">
             <div class="flex items-center justify-between">
               <span class="chip">Auto-balanced</span>
               <span class="chip">Print-ready</span>
             </div>
             <div class="mt-4">
               <p class="text-ink/70 text-sm">A peek at your month</p>
-              <div class="mt-3 grid grid-cols-7 gap-2">
+              <div class="mt-3 grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-7 gap-2">
                 <div class="rounded-lg bg-mist p-2 text-center text-xs">Mon<br><span class="text-ink font-medium">Oats</span></div>
                 <div class="rounded-lg bg-mist p-2 text-center text-xs">Tue<br><span class="text-ink font-medium">Wrap</span></div>
                 <div class="rounded-lg bg-mist p-2 text-center text-xs">Wed<br><span class="text-ink font-medium">Stir-fry</span></div>
@@ -104,7 +104,7 @@
               </div>
             </div>
           </div>
-          <div class="col-span-4 card card-hover p-6">
+          <div class="col-span-12 lg:col-span-4 card card-hover p-6">
             <p class="text-sm text-ink/60">Dessert fallback</p>
             <p class="mt-1 text-ink font-semibold">No desserts? We got you.</p>
             <ul class="mt-3 space-y-2 text-sm text-ink/80">
